--- a/service.yaml
+++ b/service.yaml
@@ -1,41 +1,53 @@
 apiVersion: serving.knative.dev/v1
 kind: Service
-
-metadata:
-  name: "hp-stg"
-  labels:
-    cloud.googleapis.com/location: "asia-northeast1"
-  annotations:
-    run.googleapis.com/ingress: all
-
 spec:
   template:
+    metadata:
+      labels:
+        github_sha: test
+        run.googleapis.com/startupProbeType: Default
+      annotations:
+        run.googleapis.com/client-name: cloud-console
+        autoscaling.knative.dev/maxScale: '2'
+        run.googleapis.com/startup-cpu-boost: 'false'
     spec:
+      containerConcurrency: 80
+      timeoutSeconds: 300
+      serviceAccountName: 292061085119-compute@developer.gserviceaccount.com
       containers:
-        - image: asia-northeast1-docker.pkg.dev/ynufes-hp-cloudrun/staging/nginx:latest
-          name: frontend
-          ports:
-            - name: http1
-              containerPort: 80
-          resources:
-            limits:
-              cpu: 1000m
-              memory: 512Mi
-        - image: asia-northeast1-docker.pkg.dev/ynufes-hp-cloudrun/staging/tokiwa23:latest
-          name: tokiwa23
-          env:
-            - name: PORT
-              value: "8080"
-          resources:
-            limits:
-              cpu: 1000m
-              memory: 512Mi
-        - image: asia-northeast1-docker.pkg.dev/ynufes-hp-cloudrun/staging/seiryo23:latest
-          name: seiryo23
-          env:
-            - name: PORT
-              value: "8081"
-          resources:
-            limits:
-              cpu: 1000m
-              memory: 512Mi
+      - name: frontend
+        image: asia-northeast1-docker.pkg.dev/ynufes-hp-cloudrun/staging/main:latest
+        ports:
+        - name: http1
+          containerPort: 80
+        resources:
+          limits:
+            cpu: 1000m
+            memory: 512Mi
+        startupProbe:
+          timeoutSeconds: 240
+          periodSeconds: 240
+          failureThreshold: 1
+          tcpSocket:
+            port: 80
+      - name: tokiwa23
+        image: asia-northeast1-docker.pkg.dev/ynufes-hp-cloudrun/staging/tokiwa23:latest
+        env:
+        - name: PORT
+          value: '8080'
+        resources:
+          limits:
+            cpu: 1000m
+            memory: 512Mi
+      - name: seiryo23
+        image: asia-northeast1-docker.pkg.dev/ynufes-hp-cloudrun/staging/seiryo23:latest
+        env:
+        - name: PORT
+          value: '8081'
+        resources:
+          limits:
+            cpu: 1000m
+            memory: 512Mi
+  traffic:
+  - percent: 100
+    latestRevision: true
