🔧 seiryo24 stg用の設定を追加

--- a/default.conf
+++ b/default.conf
@@ -5,6 +5,9 @@ server {
     server_name _;
     # Enables gzip compression to make our app faster
     # gzip on;
+    location /24/seiryo {
+        proxy_pass   http://localhost:8241;
+    }
     location /23/tokiwa {
         proxy_pass   http://localhost:8080;
     }
