tokiwa24の項目の追加

--- a/default.conf
+++ b/default.conf
@@ -5,6 +5,9 @@ server {
     server_name _;
     # Enables gzip compression to make our app faster
     # gzip on;
+    location /24/tokiwa {
+        proxy_pass   http://localhost:8242;
+    }
     location /24/seiryo {
         proxy_pass   http://localhost:8241;
     }
